make my profile prettier

--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ ul {
   border: 1px solid lightgrey;
   margin-bottom: 16px;
   box-shadow: 0px 5px 10px black;
+  border-radius: 4px;
 }
 
 #profile-picture {
@@ -84,6 +85,7 @@ ul {
 #text-intro {
   margin-bottom: 32px;
 }
+
 
 /* RESPONSIVE SIZE */
 
